feature: created metrics folder and added a default endpoint at root to display server status
